# BTZC_game_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Hawsoo_devnotes.md  README.md  formatting_rules.md  main_sources_check.py  project_lint.py
.zed/: debug.json  tasks.json
asset_raws/: simple_combat_char.blend  simple_combat_char.blend1  stupid_polygon_grid.blend  stupid_polygon_grid.blend1
assets/: benchmark_results.txt  bunch_o_numbers.txt  ecs_system_runtime.json  unnamed.map
assets/anim_frame_actions/: SlimeGirl.btafa  SlimeGirl2.btafa  SlimeGirl3.btafa  sample.btafa  simple_combat_char.btafa
assets/animator_templates/: SlimeGirl.btanitor  simple_combat_char.btanitor
assets/models/: Leever.glb  probuilder_example.mtl  simple_combat_char.glb  stupid_polygon_grid.mtl
assets/scenes/: _dev_animation_editor_view.btscene  _dev_sample_scene OLD COPY.btscene  _dev_sample_scene.btscene  sumthin_cumming_outta_me.btscene
assets/shaders/: color_shaded.frag  color_shaded.vert  color_unlit.frag  color_unlit.vert  color_unlit_lines.frag  color_unlit_lines.vert  post_process.frag  post_process.vert  skinned_mesh.comp  textured_shaded.frag  textured_shaded.vert
gallery/: a_better_script_system.mlt  simulation_based_render_dance.mlt  trs_transformation_matrices.mlt
scene_importer_tool/: HOWTO.md  requirements.txt  sample_scene.unity  scene_importer.py
src/: benchmark.odin  btzc_game_engine.h  main.cpp  refactor_to_entt.h
src/animation_editor_tool/: animation_editor_tool.cpp  animation_editor_tool.h
src/animation_frame_action_tool/: editor_state.cpp  editor_state.h  runtime_data.cpp  runtime_data.h  runtime_state.cpp  runtime_state.h
src/bt_lib/: btglm.h  btjson.cpp  btjson.h  btlogger.cpp  btlogger.h
src/game_object/: UNUSED_serialization.h  component_registry.cpp  component_registry.h  components.cpp  components.h  game_object.cpp  game_object.h
src/game_object/scripts/: list_of_scripts_begin.h  list_of_scripts_end.h  pps_player_character_movement.cpp  pre_physics_scripts.cpp  pre_physics_scripts.h  pre_render_scripts.cpp  pre_render_scripts.h  prs_apply_phys_xform_to_rend_obj.cpp  script__dev__anim_editor_tool_state_agent.cpp  script_animator_driven_hitcapsule_set.cpp  script_apply_phys_xform_to_rend_obj.cpp  script_hitcapsule.cpp  script_player_character_movement.cpp  scripts.h  serialization.h
src/game_object/system/: concrete_systems.h  system__dev__anim_editor_tool_state_agent.cpp  system_animator_driven_hitcapsule_set.cpp  system_apply_phys_xform_to_rend_obj.cpp  system_ifc.cpp  system_ifc.h  system_player_character_movement.cpp
src/game_system_logic/: entity_container.cpp  entity_container.h
src/game_system_logic/component/: _dev_animation_editor_agent.h  _dev_animation_frame_action_editor_agent.h  anim_frame_action_controller.h  animator_driven_hitcapsule_set.h  animator_root_motion.h  character_movement.cpp  character_movement.h  combat_stats.h  component_imgui_edit_functions.cpp  component_imgui_edit_functions.h  component_registry.cpp  component_registry.h  entity_metadata.h  follow_camera.h  health_stats.h  physics_object_settings.cpp  physics_object_settings.h  player_character.h  render_object_settings.h  transform.cpp  transform.h
src/game_system_logic/system/: _dev_animation_frame_action_editor.cpp  _dev_animation_frame_action_editor.h  animator_driven_hitcapsule_sets_update.cpp  animator_driven_hitcapsule_sets_update.h  hitcapsule_attack_processing.cpp  hitcapsule_attack_processing.h  imgui_render_transform_hierarchy_window.cpp  imgui_render_transform_hierarchy_window.h  input_controlled_character_movement.cpp  input_controlled_character_movement.h  player_character_lock_onto_target.cpp  player_character_lock_onto_target.h  player_character_movement.cpp  player_character_movement.h  player_character_world_space_input.cpp  player_character_world_space_input.h  process_physics_object_lifetime.cpp  process_physics_object_lifetime.h  process_render_object_lifetime.cpp  process_render_object_lifetime.h  propagate_changed_transforms.cpp  (+9 more)
src/hitbox_interactor/: hitcapsule.cpp  hitcapsule.h
src/input_handler/: input_codes.h  input_handler.cpp  input_handler.h
src/logger/: logger.cpp  logger.h
src/physics_engine/: physics_engine.cpp  physics_engine.h  physics_engine_impl.cpp  physics_engine_impl.h  physics_engine_impl_custom_listeners.h  physics_engine_impl_error_callbacks.h  physics_engine_impl_layers.h  physics_engine_impl_obj_vs_broad_phase_filter.h  physics_object.cpp  physics_object.h  physics_object_impl_char_controller.cpp  physics_object_impl_char_controller.h  physics_object_impl_kinematic_tri_mesh.cpp  physics_object_impl_kinematic_tri_mesh.h  physics_object_impl_tri_mesh.cpp  physics_object_impl_tri_mesh.h  raycast_helper.cpp  raycast_helper.h  rvec3.h
src/renderer/: animator_template.cpp  animator_template.h  animator_template_types.h  camera.cpp  camera.h  camera_read_ifc.h  debug_render_job.cpp  debug_render_job.h  imgui_renderer.cpp  imgui_renderer.h  material.cpp  material.h  material_impl_debug_lines.cpp  material_impl_debug_lines.h  material_impl_debug_picking.cpp  material_impl_debug_picking.h  material_impl_opaque_color_unlit.cpp  material_impl_opaque_color_unlit.h  material_impl_opaque_shaded.cpp  material_impl_opaque_shaded.h  material_impl_opaque_texture_shaded.cpp  material_impl_opaque_texture_shaded.h  material_impl_post_process.cpp  material_impl_post_process.h  mesh.cpp  mesh.h  model_animator.cpp  model_animator.h  render_layer.h  render_object.cpp  render_object.h  renderer.cpp  renderer.h  renderer_impl_win64.cpp  renderer_impl_win64.h  shader.cpp  shader.h  texture.cpp  texture.h
src/scene/: scene_serialization.cpp  scene_serialization_ifc.h
src/scripts/: pre_physics_scripts.cpp  pre_render_scripts.cpp  pre_render_scripts.h
src/service_finder/: service_finder.cpp  service_finder.h
src/settings/: settings.cpp  settings.h
src/timer/: timer.cpp  timer.h  watchdog_timer.cpp  watchdog_timer.h
src/uuid/: uuid.cpp  uuid.h  uuid_ifc.cpp  uuid_ifc.h
src/win64/: HOW_TO.txt  app_icon.rc
(+7 files in other folders)
